--- a/bootstraptest/templates/index copy 2.html
+++ b/bootstraptest/templates/index copy 2.html
@@ -38,13 +38,32 @@
     </div>
     <br>
     <div class="container-fluid">
-        <div class="jumbotron" style="background-image: url('/static/img1.jpeg'); background-repeat: no-repeat; background-size: cover;">
-            <h1 class="display-4" style="color: white;">Hello, world!</h1>
-            <p class="lead" style="color: white;">간단한 히어로 유닛, 그리고 간단한 점보트론 스타일 컴포넌트</p>
-            <hr class="my-4">
-            <p style="color: white;">It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/static/img1.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/img2.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/img3.jpeg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
     </div>
     <br>
     <div class="container-fluid">
