--- a/bootstraptest/templates/form.html
+++ b/bootstraptest/templates/form.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/form">입력 폼</a>
@@ -42,43 +42,28 @@
           </nav>
     </div>
     <br>
-    <div class="container-fluid">
-        <div class="jumbotron" style="background-image: url('/static/img1.jpeg'); background-repeat: no-repeat; background-size: cover;">
-            <h1 class="display-4" style="color: white; font-family: 'Nanum Pen Script', cursive;">Python 데이터 분석</h1>
-            <p class="lead" style="color: white; font-family: 'Nanum Pen Script', cursive; font-size: 30px;">간단한 히어로 유닛, 그리고 간단한 점보트론 스타일 컴포넌트</p>
-            <hr class="my-4">
-            <p style="color: white;">It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </div>
+    <div class="container"> <!-- container와 container-fluid 차이 알아두기 -->
+        <form action="/inputdata" method="GET">
+            <div class="form-group">
+              <label for="Name">Name</label> 
+              <input type="text" class="form-control" id="Name" name="Name">
+             
+            </div>
+            <div class="form-group">
+                <label for="Email">Email address</label> <!-- email address를 눌러도 입력창에 커서를 표시하게 해줌 -->
+                <input type="email" class="form-control" id="Email" name="Email" aria-describedby="emailHelp">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="Password">Password</label>
+              <input type="password" class="form-control" id="Password" name="Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
     </div>
     <br>
     <div class="container-fluid">
-        <div class="card-group">
-            <div class="card">
-              <img src="/static/img1.jpeg" class="card-img-top" alt="..." height="140px">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="/static/img2.jpeg" class="card-img-top" alt="..." height="140px">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="/static/img3.jpeg" class="card-img-top" alt="..." height="140px">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
+        
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
