--- a/flasktest/templates/list.html
+++ b/flasktest/templates/list.html
@@ -60,9 +60,9 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>{{data.Name}}</td>
+                <td>{{data.Email}}</td>
+                <td>{{data.Password}}</td>
               </tr>
             </tbody>
         </table>
