--- a/flask_upload/templates/upload.html
+++ b/flask_upload/templates/upload.html
@@ -1,8 +1,48 @@
-<html>
-    <body>
+{% extends "base.html" %}
+{% block title %}upload 화면{% endblock %}
+{% block menu %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+{% endblock %}
+{% block content %}
         <form action = "/fileUpload" method = "POST" enctype = "multipart/form-data">
-            <input type = "file" name = "file"/> <!-- name 입력 중요 !! -->
-            <input type = "submit"/>
+            <div class="form-group">
+                <label for="exampleFormControlFile1" style="font-size: 30px;";>Example file input</label><br>
+                <input type = "file" name = "file" style="height: 30px;"><br><br> <!-- name 입력 중요 !! -->
+                <input type="submit" class="btn btn-primary"></div>
+            </div>
         </form>
-    </body>
-</html>
+{% endblock %}
