--- a/flask_upload/templates/list.html
+++ b/flask_upload/templates/list.html
@@ -1,9 +1,28 @@
-<!DOCTYPE html>
-<title>Python Flask File Download Example</title>
-<h2>Download a file</h2>
+{% extends "base.html" %}
+{% block title %}Python Flask File Download Example{% endblock %}
 
-<p>
-    {% for file in files %}
-    <a href="/files/{{file}}">{{file}}</a> <br>
-    {% endfor %}
-</p>
+{% block content %}
+<h2 style="text-align: center;">Download a file</h2>
+<div class="container">
+    <table class="table table-hover" >
+        <thead>
+          <tr>
+            <th scope="col">Num</th>
+            <th scope="col">First</th>
+            <th scope="col" style="text-indent: 30pt;">Last</th>
+            <th scope="col" style="text-indent: 10pt;">download</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% for file in files %}
+            <tr>
+            <th scope="row" style="text-indent: 10pt;">{{loop.index}}</th>
+            <td>Mark</td>
+            <td>{{file}}</td>
+            <td><a href="/files/{{file}}">파일 다운로드</a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endblock %}
