--- a/flask_janjan/templates/menu.html
+++ b/flask_janjan/templates/menu.html
@@ -25,6 +25,9 @@
                         <a class="nav-link" href="/employeeform">회원 가입</a>
                       </li>
                       <li class="nav-item">
+                        <a class="nav-link" href="employeelist">직원 리스트</a>
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" href="/imglist">이미지갤러리</a>
                       </li>
                       <li class="nav-item dropdown">
