--- a/flask_janjan/templates/list.html
+++ b/flask_janjan/templates/list.html
@@ -11,9 +11,9 @@
         <table class="table table-hover table-dark">
             <thead>
               <tr>
-                <th scope="col">메뉴</th>
-                <th scope="col">가격</th>
-                <th scope="col">레시피 (비고)</th>
+                <th scope="col" width="140px" align="center">메뉴</th>
+                <th scope="col" align="center">가격</th>
+                <th scope="col" align="center">레시피 (비고)</th>
                 <th scope="col">구입처 (발주)</th>
               </tr>
             </thead>
