--- a/flask_janjan/templates/menuform.html
+++ b/flask_janjan/templates/menuform.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="form-group">
                                 <label for="plateprice">메뉴 가격</label>
-                                <input type="text" class="form-text" style="text-indent: 10pt;"id="plateprice" name="plateprice" placeholder="가격 입력">
+                                <input type="text" class="form-text" style="text-indent: 10pt;"id="plateprice" name="plateprice" placeholder="가격은 숫자로만 입력 가능">
                         </div>
                         <div class="form-group">
                                 <label for="recipe">레시피(메모)</label>
