--- a/flask_janjan/templates/ajaxlist.html
+++ b/flask_janjan/templates/ajaxlist.html
@@ -78,8 +78,7 @@
             <tbody>
               {% for item in list: %}
               <tr>
-                <td><a href="/content/{{item['userid']}}">{{item['userid']}}</a></td>
-                <td>{{item['platename']}}</td>
+                <td><a href="/content/{{item['platename]}}">{{item['platename']}}</a></td>
                 <td>{{item['plateprice']}}</td>
                 <td>{{item['recipe]}}</td>
                 <td>{{item['market]}}</td>
