--- a/flask_janjan/templates/updateform.html
+++ b/flask_janjan/templates/updateform.html
@@ -16,7 +16,7 @@
                         </div>
                         <div class="form-group">
                             <label for="plateprice">메뉴 가격</label>
-                            <input type="plateprice" class="form-control" id="plateprice" name="plateprice" value="{{list['userpw']}}" placeholder="Password">
+                            <input type="plateprice" class="form-control" id="plateprice" name="plateprice" value="{{list['plateprice]}}" placeholder="가격 입력">
                         </div>
                         <div class="form-group">
                             <label for="recipe">레시피(메모)</label>
