--- a/flask_janjan/templates/ajaxlist.html
+++ b/flask_janjan/templates/ajaxlist.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% include "import.html" %}
-    <title>메뉴 수</title>
+    <title>메뉴 검색</title>
     <script src="http://code.jquery.com/jquery-latest.js" ></script>
     <script>
      function cmdajax(){
@@ -14,13 +14,13 @@
 						console.log(result);
             $("#ajaxlist").html("");
 						$("#ajaxlist").append(
-             ' <table class="table table-hover table-dark">'+
+             ' <table class="table table-hover">'+
            ' <thead>'+
              ' <tr>'+
-                '<th scope="col">메뉴 이름</th>'+
-                '<th scope="col">메뉴 가격</th>'+
-                '<th scope="col">레시피 (비고)</th>'+
-                '<th scope="col">구입처 (발주)</th>'+
+                '<th scope="col" width=140 style="text-align: center;">메뉴</th>'+
+                '<th scope="col" width=140 style="text-align: center;">가격</th>'+
+                '<th scope="col" style="text-align: center;">레시피 (비고)</th>'+
+                '<th scope="col" style="text-align: center;">구입처 (발주)</th>'+
               '</tr>'+
             '</thead>'
             ); 
@@ -54,34 +54,34 @@
   </head>
   <body>
     {% include "menu.html" %}     
-    <h1 align="center">회원목록 리스트</h1>
+    <h1 align="center">메뉴 목록</h1><br>
     <div class="container-fluid">
       <form method="post">
         <div class="input-group mb-3">
-          <input type="text" class="form-control" onkeyup="cmdajax();"  placeholder="platename" id="platename" name="platename" aria-label="userid" aria-describedby="button-addon2">
+          <input type="text" class="form-control" onkeyup="cmdajax();"  placeholder="메뉴 이름으로 검색하세요." id="platename" name="platename" aria-label="platename" aria-describedby="button-addon2">
         </div>
       </form>
     </div>
     
     <div class="container-fluid">
       <div id='ajaxlist'>
-        <table class="table table-hover table-dark">
+        <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col">메뉴 이름</th>
-                <th scope="col">메뉴 가격</th>
-                <th scope="col">레시피 (비고)</th>
-                <th scope="col">구입처 (발주)</th>
+                <th scope="col" width=140 style="text-align: center;">메뉴</th>
+                <th scope="col" width=140 style="text-align: center;">가격</th>
+                <th scope="col" style="text-align: center;">레시피 (비고)</th>
+                <th scope="col" style="text-align: center;">구입처 (발주)</th>
               </tr>
             </thead>
             
             <tbody>
               {% for item in list: %}
               <tr>
-                <td><a href="/content/{{item['platename]}}">{{item['platename']}}</a></td>
-                <td>{{item['plateprice']}}</td>
-                <td>{{item['recipe]}}</td>
-                <td>{{item['market]}}</td>
+                <td style="text-align: center;"><a href="/content/{{item['platename']}}">{{item['platename']}}</a></td>
+                <td style="text-align: center;">{{item['plateprice']}}</td>
+                <td style="text-align: center;">{{item['recipe']}}</td>
+                <td style="text-align: center;">{{item['market']}}</td>
               </tr>
               {% endfor %}
               </tbody>
