--- a/flask_janjan/templates/content.html
+++ b/flask_janjan/templates/content.html
@@ -8,23 +8,23 @@
     {% include "menu.html" %}     
     <h1 align="center">[{{list['platename']}}] 메뉴 수정</h1>
     <div class="container-fluid">
-        <table class="table table-hover table-dark">
+        <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col">메뉴</th>
-                <th scope="col">가격</th>
-                <th scope="col">레시피 (비고)</th>
-                <th scope="col">구입처 (발주)</th>
+                <th scope="col" style="text-align: center;" width=100>메뉴</th>
+                <th scope="col" style="text-align: center;">가격</th>
+                <th scope="col" style="text-align: center;">레시피 (비고)</th>
+                <th scope="col" style="text-align: center;">구입처 (발주)</th>
               </tr>
             </thead>
             
             <tbody>
  
               <tr>
-                <td>{{list['platename']}}</td>
-                <td>{{list['plateprice']}}</td>
-                <td>{{list['recipe']}}</td>
-                <td>{{list['market']}}</td>
+                <td style="text-align: center;">{{list['platename']}}</td>
+                <td style="text-align: center;">{{list['plateprice']}}</td style="text-align: center;">
+                <td style="text-align: center;">{{list['recipe']}}</td>
+                <td style="text-align: center;">{{list['market']}}</td>
               </tr>
 
               </tbody>
