--- a/flask_janjan/templates/updateform.html
+++ b/flask_janjan/templates/updateform.html
@@ -11,21 +11,21 @@
                 <form action="/updateform" method="POST">
                         <div class="form-group">
                           <label for="platename">메뉴 이름</label>
-                          <input type="text" class="form-control" id="platename" name="platename" value="{{list['platename']}}" placeholder="{{list['platename']}}">
+                          <input type="text" class="form-control" id="platename" name="platename" value="{{list['platename']}}" readonly aria-describedby="platenameHelp" placeholder="{{list['platename']}}">
                           <small id="platenameHelp" class="form-text text-muted">메뉴는 최대 20자, 영문자와 숫자로만 구성할 수 있습니다.</small>
                         </div>
                         <div class="form-group">
                             <label for="plateprice">메뉴 가격</label>
-                            <input type="plateprice" class="form-control" id="plateprice" name="plateprice" value="{{list['plateprice]}}" placeholder="가격 입력">
+                            <input type="plateprice" class="form-control" id="plateprice" name="plateprice" value="{{list['plateprice']}}" placeholder="가격 입력">
                         </div>
                         <div class="form-group">
                             <label for="recipe">레시피(메모)</label>
                             <input type="text" class="form-control" id="recipe" name="recipe"  placeholder="추가할 메뉴의 정보를 입력하세요.">
-                    </div>
-                    <div class="form-group">
+                        </div>
+                        <div class="form-group">
                             <label for="market">구입처(발주)</label>
                             <input type="text" class="form-control" id="market" name="market" placeholder="추가할 메뉴의 구입처(발주) 정보 입력하세요.">
-                        
+                        </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
         </div>
