--- a/flask_janjan/templates/bootstraptest.html
+++ b/flask_janjan/templates/bootstraptest.html
@@ -5,11 +5,11 @@
 
 <div class="container-fluid">
   <!-- Content here -->
-  <div class="jumbotron" style="background-image:url('/static/plume.jpg');background-size: cover;">
-      <h1 class="display-4" style="font-family: 'Do Hyeon', sans-serif;">じゃんじゃんへようこそ</h1>
-      <p class="lead">조용한 골목길에 숨어있는 쿠시카츠 쟌쟌!</p>
+  <div class="jumbotron" style="background-image:url('/static/img/common.jpeg'); background-size: auto;">
+      <h1 class="display-4" style="font-family: 'Do Hyeon', sans-serif; color: white;">⌜じゃんじゃん⌟ </h1>
+      <p class="lead" style="color: white; background-color:black;">조용한 골목길에 숨어있는 쿠시카츠 쟌쟌!</p>
       <hr class="my-4">
-      <p>아늑한 정원과 일본의 다다미 방이 있는 쿠시카츠 이자까야
+      <p style="color: white; background-color: black;">아늑한 정원과 일본의 다다미 방이 있는 쿠시카츠 이자까야
         일본 오사카의 3대 명물 중 하나인 쿠시카츠와 오사카를 느껴보세요
       </p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
@@ -19,10 +19,11 @@
 <div class="container-fluid">
       <div class="card-group">
               <div class="card">
-                <img src="/static/plume.jpg" class="card-img-top" alt="...">
+                <img src="/static/img/common-2.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title" style="text-align: center;">焼きそば (야끼소바)</h5>
+                  <p class="card-text" style="text-align: center;">불맛을 살린 일본 오사카식 돼지고기 야끼소바입니다.<br>
+                  클라우드 인증 매장인 잔잔의 시원한 클라우드 생맥주와 함께 곁들이시면 더욱 좋습니다.</p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
