--- a/flask_janjan/templates/menu.html
+++ b/flask_janjan/templates/menu.html
@@ -22,10 +22,10 @@
                         <a class="nav-link" href="/ajaxlist">메뉴 검색</a>
                         </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/employeeform">회원 가입</a>
+                        <a class="nav-link" href="/userform">회원 가입</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="employeelist">직원 리스트</a>
+                        <a class="nav-link" href="/userlist">직원 리스트</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/imglist">이미지갤러리</a>
