--- a/flask_janjan/templates/ajaxlist.html
+++ b/flask_janjan/templates/ajaxlist.html
@@ -58,7 +58,7 @@
     <div class="container-fluid">
       <form method="post">
         <div class="input-group mb-3">
-          <input type="text" class="form-control" onkeyup="cmdajax();"  placeholder="메뉴 이름으로 검색하세요." id="platename" name="platename" aria-label="platename" aria-describedby="button-addon2">
+          <input type="text" class="form-control" onkeyup="cmdajax();"  placeholder="메뉴 이름으로 검색하세요. (엔터키 입력 없이 검색 후 메뉴 이름 선택 후 수정 및 삭제 작업)" id="platename" name="platename" aria-label="platename" aria-describedby="button-addon2">
         </div>
       </form>
     </div>
