--- a/flask_janjan/templates/list.html
+++ b/flask_janjan/templates/list.html
@@ -11,11 +11,11 @@
         <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col" width="30" align="center"></th>
-                <th scope="col" width="140px" style="text-align: center;">메뉴</th>
-                <th scope="col" width="140" style="text-align: center;">가격</th>
-                <th scope="col" style="text-align: center;">레시피 (비고)</th>
-                <th scope="col">구입처 (발주)</th>
+                <th scope="col" width="70" align="center"></th>
+                <th scope="col" width="100" style="text-align: center;">메뉴</th>
+                <th scope="col" width="170" style="text-align: center;">가격</th>
+                <th scope="col" width="170" style="text-align: center;">레시피 (비고)</th>
+                <th scope="col" width="170" style="text-align: center;">구입처 (발주)</th>
               </tr>
             </thead>
             
