200321 updates at noon

--- a/flask_janjan/templates/list.html
+++ b/flask_janjan/templates/list.html
@@ -8,7 +8,7 @@
     {% include "menu.html" %}     
     <h1 align="center">메뉴 목록</h1><br>
     <div class="container-fluid">
-        <table class="table table-hover">
+        <table class="table table-hover container">
             <thead>
               <tr>
                 <th scope="col" width="70" align="center"></th>
