--- a/flask_janjan/templates/userlist.html
+++ b/flask_janjan/templates/userlist.html
@@ -8,7 +8,7 @@
     {% include "menu.html" %}     
     <h1 align="center">직원 목록</h1><br>
     <div class="container-fluid">
-        <table class="table table-hover">
+        <table class="table table-hover container">
             <thead>
               <tr>
                 <th scope="col" width="70" style="text-align: center;" align="center">번호</th>
