--- a/javascripttest/templates/index5.html
+++ b/javascripttest/templates/index5.html
@@ -9,5 +9,8 @@
     <input type="button" value="확인" onclick="gugu()">
 
     <div id="result">innerHTML 영역</div>
+    <script>
+    document.getElementById("dan").focus();
+    </script>
 </body>
 </html>
