--- a/flask_janjan/templates/menu.html
+++ b/flask_janjan/templates/menu.html
@@ -1,7 +1,7 @@
 
         <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="/">
-              <img src="/static/swimming.png" width="30" height="30" class="d-inline-block align-top" alt="">
+              <img src="/static/img/swimming.png" width="30" height="30" class="d-inline-block align-top" alt="">
                JanJan
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
