--- a/flask_CRUD_SQLAlchemy/templates/index.html
+++ b/flask_CRUD_SQLAlchemy/templates/index.html
@@ -54,9 +54,9 @@
 
                            <th>ID</th>
                            <th>Name</th>
-                           <th>Email</th>
-                           <th>Phone</th>
-                           <th>Action</th>
+                           <th style="text-indent: 45px;">Email</th>
+                           <th style="text-indent: 20px;">Phone</th>
+                           <th style="text-indent: 30px;">Action</th>
 
                      </tr>
 
@@ -68,7 +68,7 @@
                               <td>{{row.email}}</td>
                               <td>{{row.phone}}</td>
 
-                              <td>
+                              <td>           <!-- a태그이지만 btn으로 지정하면 버튼처럼 보임-->
                                  <a href="/update/{{row.id}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.id}}">Edit</a>
                                  <a href="/delete/{{row.id}}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
                               </td>
@@ -77,7 +77,7 @@
 
 
                         <!-- Modal Edit Employee-->
-                        <div id="modaledit{{row.id}}" class="modal fade" role="dialog">
+                        <div id="modaledit{{row.id}}" class="modal fade" role="dialog"> 
                            <div class="modal-dialog">
                               <div class="modal-content">
 
@@ -219,6 +219,7 @@
 
 
                                  <button class="btn btn-primary" type="submit">Add Employee</button>
+                                                               <!-- submit = post방식 -->
 
 
                               </div>
@@ -233,7 +234,7 @@
 
 
                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-
+                                                      <!-- data-dismiss : Close를 누르면 modal창 사라짐 -->
 
                         </div>
                      </div>
