--- a/flask_member_SQLAlchemy/templates/updateform.html
+++ b/flask_member_SQLAlchemy/templates/updateform.html
@@ -9,6 +9,11 @@
     <h1 align="center">회원정보 수정폼</h1>
         <div class="container">
                 <form action="/updateform" method="POST">
+                    <div class="form-group">
+                        
+                        <input type="text" class="form-control" id="id" name="id" value="{{list['id']}}" hidden>
+                    
+                    </div>
                         <div class="form-group">
                           <label for="userid">사용자 아이디</label>
                           <input type="text" class="form-control" id="userid" name="userid" value="{{list['userid']}}" readonly aria-describedby="useridHelp" placeholder="Enter userid">
