--- a/flask_member_SQLAlchemy/templates/content.html
+++ b/flask_member_SQLAlchemy/templates/content.html
@@ -11,28 +11,28 @@
         <table class="table table-hover table-dark">
             <thead>
               <tr>
-                <th scope="col">아이디</th>
-                <th scope="col">패스워드</th>
-                <th scope="col">이름</th>
-                <th scope="col">나이</th>
-                <th scope="col">메일주소</th>
-                <th scope="col">주소</th>
-                <th scope="col">성별</th>
-                <th scope="col">전화번호</th>
+                <th scope="col" style="text-align: center;">아이디</th>
+                <th scope="col" style="text-align: center;">패스워드</th>
+                <th scope="col" style="text-align: center;">이름</th>
+                <th scope="col" style="text-align: center;">나이</th>
+                <th scope="col" style="text-align: center;">메일주소</th>
+                <th scope="col" style="text-align: center;">주소</th>
+                <th scope="col" style="text-align: center;">성별</th>
+                <th scope="col" style="text-align: center;">전화번호</th>
               </tr>
             </thead>
             
             <tbody>
  
               <tr>
-                <td>{{list['userid']}}</td>
-                <td>{{list['userpw']}}</td>
-                <td>{{list['username']}}</td>
-                <td>{{list['userage']}}</td>
-                <td>{{list['useremail']}}</td>
-                <td>{{list['useradd']}}</td>
-                <td>{{list['usergender']}}</td>
-                <td>{{list['usertel']}}</td>
+                <td style="text-align: center;">{{list['userid']}}</td>
+                <td style="text-align: center;">{{list['userpw']}}</td>
+                <td style="text-align: center;">{{list['username']}}</td>
+                <td style="text-align: center;">{{list['userage']}}</td>
+                <td style="text-align: center;">{{list['useremail']}}</td>
+                <td style="text-align: center;">{{list['useradd']}}</td>
+                <td style="text-align: center;">{{list['usergender']}}</td>
+                <td style="text-align: center;">{{list['usertel']}}</td>
               </tr>
 
               </tbody>
