--- a/flask_member_SQLAlchemy/templates/updateform.html
+++ b/flask_member_SQLAlchemy/templates/updateform.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% include "menu.html" %} 
-    <h1 align="center">회원정보 수정폼</h1>
+    <h1 align="center">{{list['username']}} 회원정보 수정폼</h1>
         <div class="container">
                 <form action="/updateform" method="POST">
                     <div class="form-group">
@@ -16,7 +16,7 @@
                     </div>
                         <div class="form-group">
                           <label for="userid">사용자 아이디</label>
-                          <input type="text" class="form-control" id="userid" name="userid" value="{{list['userid']}}" readonly aria-describedby="useridHelp" placeholder="Enter userid">
+                          <input type="text" class="form-control" id="userid" name="userid" value="{{list['userid']}}" readonly aria-describedby="useridHelp" placeholder="{{list['userid']}}">
                           <small id="useridHelp" class="form-text text-muted">아이디는 최소 5자이상, 영문자,숫자,_로만 구성할수 있습니다.</small>
                         </div>
                         <div class="form-group">
