--- a/flask_member_SQLAlchemy/templates/ajaxlist.html
+++ b/flask_member_SQLAlchemy/templates/ajaxlist.html
@@ -104,7 +104,7 @@
             <tbody>
               {% for item in list: %}
               <tr>
-                <td style="text-align: center;"><a href="/content/{{item['id']}}">{{item['id']}}</a></td>
+                <td style="text-align: center;"><a href="/content/{{item['id']}}">{{loop.index}}</a></td>
                 <td style="text-align: center;">{{item['userid']}}</td>
                 <td style="text-align: center;">{{item['userpw']}}</td>
                 <td style="text-align: center;">{{item['username']}}</td>
