--- a/flask_member_SQLAlchemy/templates/list.html
+++ b/flask_member_SQLAlchemy/templates/list.html
@@ -26,7 +26,7 @@
             <tbody>
               {% for item in list: %}
               <tr>  <!-- item.userid 가능 !! -->
-                <td style="text-align: center;"><a href="/content/{{item['id']}}">{{item['id']}}</a></td>
+                <td style="text-align: center;"><a href="/content/{{item['id']}}">{{loop.index}}</a></td>
                 <td style="text-align: center;">{{item['userid']}}</td>
                 <td style="text-align: center;">{{item['userpw']}}</td>
                 <td style="text-align: center;">{{item['username']}}</td>
