--- a/200411_Test/flask_movie_SQLAlchemy/templates/menu.html
+++ b/200411_Test/flask_movie_SQLAlchemy/templates/menu.html
@@ -13,13 +13,16 @@
                             <a class="nav-link" href="/bootstrap">Home <span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/usersform">입력폼</a>
+                            <a class="nav-link" href="/movieinfo">영화 정보 수집</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/list">회원리스트</a>
+                            <a class="nav-link" href="/movielist">영화 정보 리스트</a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link" href="/ajaxlist">회원검색리스트</a>
+                            <a class="nav-link" href="/list">영화 정보 시각화</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="/ajaxlist">영화평 감정 분석</a>
                             </li>
                           <li class="nav-item">
                             <a class="nav-link" href="/imglist">이미지갤러리</a>
