--- a/200411_Test/flask_movie_SQLAlchemy/templates/movieinfo.html
+++ b/200411_Test/flask_movie_SQLAlchemy/templates/movieinfo.html
@@ -4,29 +4,29 @@
 {% block content %}
   <div class="container">
     <div class="card-group">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+      <div class="card border-warning">
+        <img src="https://movie-simg.yes24.com/NYes24//MOVIE//M65/M78/M000076578_145640.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">네이버 영화 정보 크롤링</h5>
+          <h5 class="card-title">네이버 영화 정보</h5>
           <p class="card-text">네이버 영화 상영작을 크롤링합니다.</p>
           <p class="card-text"><small class="text-muted">정보 수집 전</small></p>
           <button type="button" class="btn btn-primary">Primary</button>
         </div>
       </div>
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://movie-simg.yes24.com/NYes24//MOVIE//M53/M65/M000075365_172411.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">네이버 영화평 크롤링</h5>
+          <h5 class="card-title">네이버 영화평</h5>
           <p class="card-text">네이버 영화 감상평을 크롤링합니다.</p>
           <p class="card-text"><small class="text-muted">정보 수집 전</small></p>
           <button type="button" class="btn btn-primary">Primary</button>
         </div>
       </div>
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://movie-simg.yes24.com/NYes24//MOVIE//M71/M05/M000077105_102708.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">영화 매출 정보 크롤링</h5>
-          <p class="card-text">네이버 영화 진흥 api에서 매출 정보를 크롤링합니다.</p>
+          <h5 class="card-title">영화 매출 정보</h5>
+          <p class="card-text">영화 진흥 api에서 매출 정보를 크롤링합니다.</p>
           <p class="card-text"><small class="text-muted">정보 수집 전</small></p>
           <button type="button" class="btn btn-primary">Primary</button>
         </div>
