--- a/200411_Test/flask_movie_SQLAlchemy/templates/movieinfo.html
+++ b/200411_Test/flask_movie_SQLAlchemy/templates/movieinfo.html
@@ -2,6 +2,21 @@
 {% block title%}영화 정보 크롤링{% endblock %}
 
 {% block content %}
+
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script>
+  function moviesearch(){
+    $.ajax({
+      type : "GET",
+      url : "/moviesearch",
+      dataType : "text",
+      success : function(result){
+        $("small.text-muted").html(result);
+      }
+    });
+  }
+</script>
+
   <div class="container">
     <div class="card-group">
       <div class="card border-warning">
@@ -9,8 +24,8 @@
         <div class="card-body">
           <h5 class="card-title">네이버 영화 정보</h5>
           <p class="card-text">네이버 영화 상영작을 크롤링합니다.</p>
-          <p class="card-text"><small class="text-muted">정보 수집 전</small></p>
-          <button type="button" class="btn btn-primary">Primary</button>
+          <p class="card-text"><small class="text-muted" onclick="moviesearch()">정보 수집 전</small></p>
+          <button type="button" class="btn btn-primary">정보 수집</button>
         </div>
       </div>
       <div class="card">
@@ -18,8 +33,8 @@
         <div class="card-body">
           <h5 class="card-title">네이버 영화평</h5>
           <p class="card-text">네이버 영화 감상평을 크롤링합니다.</p>
-          <p class="card-text"><small class="text-muted">정보 수집 전</small></p>
-          <button type="button" class="btn btn-primary">Primary</button>
+          <p class="card-text"><small class="text-muted" onclick="moviesearch()">정보 수집 전</small></p>
+          <button type="button" class="btn btn-primary">정보 수집</button>
         </div>
       </div>
       <div class="card">
@@ -28,7 +43,7 @@
           <h5 class="card-title">영화 매출 정보</h5>
           <p class="card-text">영화 진흥 api에서 매출 정보를 크롤링합니다.</p>
           <p class="card-text"><small class="text-muted">정보 수집 전</small></p>
-          <button type="button" class="btn btn-primary">Primary</button>
+          <button type="button" class="btn btn-primary" onclick="moviesearch()">정보 수집</button>
         </div>
       </div>
     </div>
