200411 updates at last

--- a/200411_Test/flask_movie_SQLAlchemy/templates/movieinfo.html
+++ b/200411_Test/flask_movie_SQLAlchemy/templates/movieinfo.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title%}영화 정보 크롤링{% endblock %}
+{% block title%}영화 정보 웹 페이지{% endblock %}
 
 {% block content %}
 
