--- a/200411_Test/flask_movie_SQLAlchemy/templates/menu.html
+++ b/200411_Test/flask_movie_SQLAlchemy/templates/menu.html
@@ -2,7 +2,7 @@
         <nav class="navbar navbar-dark bg-dark">
                 <a class="navbar-brand" href="/">
                   <img src="/static/swimming.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                  Bootstrap
+                  Movie infos
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
