--- a/200411_WebCrawling/flask_movie_SQLAlchemy/templates/menu.html
+++ b/200411_WebCrawling/flask_movie_SQLAlchemy/templates/menu.html
@@ -13,10 +13,10 @@
                             <a class="nav-link" href="/bootstrap">Home <span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/movieinfo">영화정보수집</a>
+                            <a class="nav-link" href="/movieinfo">영화 정보 수집</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/movielist">영화정보리스트 및 시각화</a>
+                            <a class="nav-link" href="/movielist">영화 정보 리스트</a>
                           </li>
                           <li class="nav-item">
                               <a class="nav-link" href="/ajaxlist">영화평 감정분석</a>
