--- a/200411_WebCrawling/flask_movie_SQLAlchemy/templates/movieinfo.html
+++ b/200411_WebCrawling/flask_movie_SQLAlchemy/templates/movieinfo.html
@@ -24,7 +24,7 @@
         <div class="card-body">
           <h5 class="card-title">네이버 영화 정보</h5>
           <p class="card-text">네이버 영화 상영작을 크롤링 합니다.</p>
-          <p class="card-text"><small class="text-muted" id='c1'>정보수집 전</small></p>
+          <p class="card-text"><small class="text-muted" id='c1'>정보수집 전 (시간이 다소 걸립니다.)</small></p>
           <p><button type="button" class="btn btn-danger" onclick="moviesearch();">정보검색</button></p> 
         </div>
       </div>
