--- a/200411_WebCrawling/flask_movie_SQLAlchemy/templates/content.html
+++ b/200411_WebCrawling/flask_movie_SQLAlchemy/templates/content.html
@@ -11,7 +11,7 @@
      url : add,
      dataType : "text",
      success : function(result){
-       $("#img_src").html('<img src="/static/img'+code+'.png">');
+       $("#img_src").html('<img src="/static/img/img'+code+'.png">');
      }
    });
   }
