--- a/200411_WebCrawling/flask_movie_SQLAlchemy/templates/movieinfo.html
+++ b/200411_WebCrawling/flask_movie_SQLAlchemy/templates/movieinfo.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="card border-warning">
-        <img src="https://lh3.googleusercontent.com/proxy/EYA-fSjlRYLu8NyvvM0pkQGn_yMlJaYiFDdUvRKd36_DZDIw0mckeTwy_GiOfUgN67Le-4U3ttFDiXPoAoKDk7nhKoL2hT9mLUk4Exf-5fle9W174D-Y_CFj5DBwwj3t" class="card-img-top" alt="...">
+        <img src="https://movie-phinf.pstatic.net/20200324_146/1585014840962Mfk9w_JPEG/movie_image.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">영화 매출 정보</h5>
           <p class="card-text">영화진흥api에서 매출 정보 등을 크롤링 합니다.</p>
