--- a/flask_member_01/templates/menu.html
+++ b/flask_member_01/templates/menu.html
@@ -13,7 +13,7 @@
                             <a class="nav-link" href="/bootstrap">Home <span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/usersform">입력폼</a>
+                            <a class="nav-link" href="/usersform">회원가입</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="/list">회원리스트</a>
